--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://shubhangibw.github.io/stackwebsite/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'stack'
