--- a/hugo.toml
+++ b/hugo.toml
@@ -5,7 +5,7 @@ theme = 'stack'
 [Params.Sidebar]
     subtitle = "For Yourself"
     description = "A personal blog"
-    compact = true
+    compact = false
     avatar.enabled = true
     avatar.src = "me.jpg"
     avatar.local = true
