--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - uses: 'actions/checkout@v4'
+        with:
+          submodules: 'recursive'
       - uses: 'peaceiris/actions-hugo@v3'
         with:
           hugo-version: '0.136.4'
