--- a/hugo.toml
+++ b/hugo.toml
@@ -7,5 +7,5 @@ theme = 'stack'
     description = "A personal blog"
     compact = false
     avatar.enabled = true
-    avatar.src = "https://avatars.githubusercontent.com/u/12345678?v=4"
+    avatar.src = "me.jpg"
     avatar.local = false
