--- a/hugo.toml
+++ b/hugo.toml
@@ -7,5 +7,5 @@ theme = 'stack'
     description = "A personal blog"
     compact = false
     avatar.enabled = true
-    avatar.src = "images/me.jpg"
+    avatar.src = "https://avatars.githubusercontent.com/u/132783705?v=4"
     avatar.local = false
