--- a/hugo.toml
+++ b/hugo.toml
@@ -7,5 +7,5 @@ theme = 'stack'
     description = "A personal blog"
     compact = false
     avatar.enabled = true
-    avatar.src = "/stackwebsite/static/images/me.jpg"
+    avatar.src = "/stackwebsite/images/me.jpg"
     avatar.local = false
